--- a/style.css
+++ b/style.css
@@ -265,15 +265,17 @@ h3 {
 .testimonial-content p {
   padding-top: 17px;
 }
-.testimonial-content button,
+.testimonial-content a,
 .submit,
 .q-btn {
+  text-decoration: none;
   padding: 10px;
   margin-top: 20px;
   width: 250px;
   text-transform: uppercase;
   cursor: pointer;
   font-size: 16px;
+  color: white;
   height: 60px;
   border-radius: 10px;
   background: #dbaa14;
