--- a/style.css
+++ b/style.css
@@ -267,7 +267,8 @@ h3 {
 }
 .testimonial-content a,
 .submit,
-.q-btn {
+.q-btn,
+.testimonial a{
   text-decoration: none;
   padding: 10px;
   margin-top: 20px;
