--- a/style.css
+++ b/style.css
@@ -267,8 +267,7 @@ h3 {
 }
 .testimonial-content a,
 .submit,
-.q-btn,
-.testimonial a{
+.q-btn,{
   text-decoration: none;
   padding: 10px;
   margin-top: 20px;
@@ -281,7 +280,6 @@ h3 {
   border-radius: 10px;
   background: #dbaa14;
   border: none;
-  font-weight: bold;
 }
 
 .contact {
